--- a/bmigenerator.html
+++ b/bmigenerator.html
@@ -44,19 +44,23 @@
         const bmi=document.querySelector('.bmi');
         const info=document.querySelector('.info');
         info.style.display='flex';
+        const condition=document.querySelector('.condition');
+
         if (height=== '' || height <0 || isNaN(height)){
-            bmi.innerHTML="please give correct height value"
+            bmi.innerHTML="please give correct height value";
+            condition.style.dislay='none'
         }
 
         else if (weight=== '' || weight <0 || isNaN(weight)){
-            bmi.innerHTML="please give correct Weight value"
+            bmi.innerHTML="please give correct Weight value";
+            condition.style.dislay='none'
+
         }
 
         else{
             const BMI=(weight/((height*height)/10000)).toFixed(2);
             // console.log(BMI);
             bmi.innerHTML="BMI:-"+BMI;
-        const condition=document.querySelector('.condition');
         if (BMI<=18.6)
         {
             condition.innerHTML="You are Underweight"
