--- a/digitalclock.html
+++ b/digitalclock.html
@@ -1,1 +1,46 @@
-hello
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+    
+        body,html{
+            display:flex;
+            width:100%;
+            height:100%;
+            justify-content:center;
+            align-items:center;
+            flex-direction:column;
+        }
+
+        .clock{
+            width:20%;
+            height:10%;
+            background-color:orange;
+            display:flex;
+            border-radius:25px;
+            justify-content:center;
+            align-items:center;
+            flex-direction:row;
+        }
+    </style>
+</head>
+<body>
+    <span><h1>Your local time</h1></span>
+    <div class="clock">
+    
+    </div>
+</body>
+<script>
+    const clock=document.querySelector('.clock');
+
+    setInterval(()=>{
+        let date=new Date();
+
+        // console.log(date.toLocaleTimeString());
+        clock.innerHTML=date.toLocaleTimeString();
+    },1000)
+</script>
+</html>
